# electric-guitar

./: CMakeLists.txt
src/: electric_guitar.cpp  main.cpp
src/inc/: electric_guitar.hpp
